Update Russian strings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -329,11 +329,11 @@
     <string name="mitm_setup_wizard_intro">Этот мастер настройки проведет вас через установку mitm дополнения для PCAPdroid и центра сертификации, которые необходимы для проведения <a href="%1$s">дешифрования TLS</a></string>
     <string name="app_intro_next_button">Далее</string>
     <string name="app_intro_skip_button">Пропустить</string>
-    <string name="block_private_dns_summary">Обнаруживать и по возможности блокировать использование приватных DNS, чтобы инспектировать DNS траффик. Отключение этой опции может затруднить обнаружение хостов</string>
+    <string name="block_private_dns_summary">Обнаруживать и по возможности блокировать использование приватных DNS, чтобы инспектировать DNS траффик. Отключение этой опции может затруднить анализ траффика</string>
     <string name="mitm_setup_wizard_done">PCAPdroid теперь готов к дешифрованию TLS траффика
 \n
 \nОзнакомьтесь с <a href="%1$s">руководством пользователя</a> чтобы узнать больше о мерах безопасности, которые могут предотвратить дешифрование и как преодолеть их</string>
-    <string name="app_intro_welcome_msg">PCAPdroid это ориентированное на конфиденциальность приложение, которое позволяет вам отслеживатьи анализировать соединения, производимые приложениями с вашего устройства
+    <string name="app_intro_welcome_msg">PCAPdroid это ориентированное на конфиденциальность приложение, которое позволяет вам отслеживать и анализировать соединения, производимые приложениями с вашего устройства
 \n
 \nБолее того, приложение позволяет вам экспортировать дамп траффика в виде PCAP, извлекать метаданные и многое другое!</string>
     <string name="vpn_setup_msg">PCAPdroid симулирует VPN чтобы захватывать весь траффик устройства без необходимости в root.
@@ -347,7 +347,7 @@
 \nИспользуя актуальные черные списки, эта функция может обнаруживать, блокировать и уведомлять о вредоносных соединениях в реальном времени</string>
     <string name="app_intro_geolocation_msg">PCAPdroid может использовать локальную базу данных для определения страны, в которой находится удаленный сервер
 \n
-\nВам необходимо сперва скачать базу данных из настроек PCAPdroid</string>
+\nВам необходимо сперва скачать базу данных геолокации из настроек приложения</string>
     <string name="app_intro_traffic_inspection">Просматривать HTTP запросы, ответы и необработанные данные легко, благодаря встроенным декодерам
 \n
 \nПопалось зашифрованное соединение\? Вы можете включить<a href="%1$s">дешифрование TLS</a> чтобы получить дешифрованные данные</string>
