--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
     <string name="http_server_status">HTTP сервер: http://%1$s:%2$d</string>
     <string name="rcvd_and_sent">%1$s получено — %2$s отправлено</string>
     <string name="query">Запрос</string>
-    <string name="host">Главная ЭВМ</string>
+    <string name="host">Хост</string>
     <string name="app_filter">Целевое приложение</string>
     <string name="ready">Готов</string>
     <string name="about">О приложении</string>
