Disable full payload on low memory
Closes #220

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -362,4 +362,6 @@
     <string name="permission_granted">%1$s permission was granted</string>
     <string name="permission_grant_fail">%1$s permission could not be granted</string>
     <string name="connection_not_found">Could not find the given connection</string>
+    <string name="full_payload_memory_released">The app ran out of memory. Connections payload is now disabled</string>
+    <string name="capture_stopped_low_memory">Capture stopped due to low memory</string>
 </resources>
