--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -134,7 +134,7 @@
     <string name="firewall">Güvenlik duvarı</string>
     <string name="n_pkts">%1$s paket</string>
     <string name="show_only_blocked">Engellenen bağlantılar</string>
-    <string name="blocked_connection_filter">engellendi</string>
+    <string name="blocked_connection_filter">Engellendi</string>
     <string name="unlock_code">Kilit açma kodu</string>
     <string name="validate">Doğrula</string>
     <string name="valid">Geçerli</string>
@@ -354,4 +354,16 @@
 \nGüncel kara listeleri kullanarak, kötü niyetli bağlantıları gerçek zamanlı olarak tespit edebilir, engelleyebilir ve uyarabilir</string>
     <string name="permission_granted">%1$s izni verildi</string>
     <string name="permission_grant_fail">%1$s izni verilemedi</string>
+    <string name="memory_usage">Bellek kullanımı</string>
+    <string name="allowed_connection_filter">İzin verildi</string>
+    <string name="firewall_filter">Güvenlik duvarı: %1$s</string>
+    <string name="heap_usage">Yığın kullanımı</string>
+    <string name="connection_not_found">Verilen bağlantı bulunamadı</string>
+    <string name="low_memory">Düşük bellek</string>
+    <string name="low_memory_info">Uygulamanın belleği tükeniyor, çökmeler bekleniyor</string>
+    <string name="capture_stopped_low_memory">Yakalama durduruldu</string>
+    <string name="full_payload_disabled">Tam yük seçeneği devre dışı bırakıldı</string>
+    <string name="vpn_lockdown_notice">PCAPdroid çalışmıyorken (örneğin yeniden başlattıktan sonra) uygulamaların internete erişmesini önlemek için PCAPdroid\'i kilitleme modunda her zaman açık bir VPN olarak ayarlayabilirsiniz.
+\n
+\nŞimdi VPN ayarlarını açmak istiyor musunuz\?</string>
 </resources>
