--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,8 +104,6 @@
     <string name="get_app">Get it:</string>
     <string name="unknown_app">Unknown</string>
     <string name="phone_app">Phone</string>
-    <string name="ipv6">IPv6</string>
-    <string name="enable_ipv6_summary">Allow IPv6 connections to the Internet. Only use this on networks with an IPv6 gateway</string>
     <string name="error">Error</string>
     <string name="conn_status_unreachable">Unreachable</string>
     <string name="other_prefs">Other</string>
@@ -369,4 +367,8 @@
     <string name="heap_usage">Heap usage</string>
     <string name="memory_usage">Memory usage</string>
     <string name="vpn_lockdown_notice">To prevent apps from accessing the Internet when PCAPdroid is not running (e.g. after a reboot) you can set PCAPdroid as an always-on VPN in lockdown mode.\n\nDo you want to open the VPN settings now?</string>
+    <string name="ip_mode">VPN IP addresses</string>
+    <string name="ipv4_only">IPv4 only</string>
+    <string name="ipv6_only">IPv6 only</string>
+    <string name="ip_both">IPv4 and IPv6</string>
 </resources>
