--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -371,4 +371,5 @@
     <string name="ipv4_only">IPv4 only</string>
     <string name="ipv6_only">IPv6 only</string>
     <string name="ip_both">IPv4 and IPv6</string>
+    <string name="notifications_notice">The app uses notifications to send alerts in case of anomalous events. Grant it the permission to send notifications in the next screen</string>
 </resources>
