Apps in VPN exceptions are now searchable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -374,4 +374,5 @@
     <string name="notifications_notice">The app uses notifications to send alerts in case of anomalous events. Grant it the permission to send notifications in the next screen</string>
     <string name="vpn_exceptions">VPN Exceptions</string>
     <string name="vpn_exceptions_summary">Exclude some apps from the VPN connection. Their traffic will not be monitored</string>
+    <string name="no_matches_found">No matches</string>
 </resources>
