--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="pcapdroid_app_name" translatable="false">PCAPdroid (Debug)</string>
+    <string name="pcapdroid_app_name" translatable="false">PCAPdroid Beta</string>
 </resources>
